# claude-courier

./: .gitignore  CHANGELOG.md  README.md  SOP.md  config.example.yaml  pyproject.toml  setup.cfg
docs/superpowers/specs/: 2026-03-22-claude-courier-design.md
src/claude_courier/: __init__.py  cli.py  config.py  daemon.py  desktop.py  git_ops.py  history.py  path_mapper.py  sync.py
tests/: test_config.py  test_desktop.py  test_history.py  test_path_mapper.py  test_sync.py
